<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_from_b_to_c"
        android:layout_width="103dp"
        android:layout_height="48dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="44dp"
        android:text="@string/button_to_c"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_from_b_to_a"
        android:layout_width="113dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="44dp"
        android:text="@string/button_to_a"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_from_b_to_h"
        android:layout_width="99dp"
        android:layout_height="48dp"
        android:layout_marginBottom="44dp"
        android:layout_marginEnd="36dp"
        android:text="@string/button_to_h"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="90dp"
        android:layout_height="79dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="230dp"
        android:text="@string/node_b_name"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>