<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_from_h_to_g"
        android:layout_width="95dp"
        android:layout_height="66dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="44dp"
        android:text="@string/button_to_g"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_from_h_to_i"
        android:layout_width="93dp"
        android:layout_height="71dp"
        android:layout_marginEnd="56dp"
        android:layout_marginTop="40dp"
        android:text="@string/button_to_i"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_from_h_to_a"
        android:layout_width="wrap_content"
        android:layout_height="84dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="231dp"
        android:text="@string/button_to_a"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="100dp"
        android:layout_height="82dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="214dp"
        android:text="@string/node_h_name"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toEndOf="@+id/button_from_h_to_a"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>