<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_A">

    <TextView
        android:id="@+id/GreetingMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="292dp"
        android:layout_marginEnd="177dp"
        android:layout_marginStart="177dp"
        android:layout_marginTop="291dp"
        android:text="@string/node_a_name"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_from_a_to_b"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="44dp"
        android:layout_marginTop="36dp"
        android:text="@string/button_to_b"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_from_a_to_h"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="44dp"
        android:layout_marginEnd="44dp"
        android:text="@string/button_to_h"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>